smart_watch/build/log/idf_py_stdout_output_86114
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/omen/esp/smart_watch/build/bootloader/esp-idf/esptool_py && /home/omen/.espressif/python_env/idf5.2_py3.10_env/bin/python /home/omen/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/omen/esp/smart_watch/build/bootloader/bootloader.bin
Bootloader binary size 0x6f30 bytes. 0xd0 bytes (1%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/smart_watch.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/smart_watch.c.obj 
/home/omen/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.2.3\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/omen/esp/smart_watch/build/config -I/home/omen/esp/smart_watch/main -I/home/omen/esp/esp-idf/components/newlib/platform_include -I/home/omen/esp/esp-idf/components/freertos/config/include -I/home/omen/esp/esp-idf/components/freertos/config/include/freertos -I/home/omen/esp/esp-idf/components/freertos/config/xtensa/include -I/home/omen/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/omen/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/omen/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/omen/esp/esp-idf/components/freertos/esp_additions/include -I/home/omen/esp/esp-idf/components/esp_hw_support/include -I/home/omen/esp/esp-idf/components/esp_hw_support/include/soc -I/home/omen/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/omen/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/omen/esp/esp-idf/components/heap/include -I/home/omen/esp/esp-idf/components/log/include -I/home/omen/esp/esp-idf/components/soc/include -I/home/omen/esp/esp-idf/components/soc/esp32 -I/home/omen/esp/esp-idf/components/soc/esp32/include -I/home/omen/esp/esp-idf/components/hal/platform_port/include -I/home/omen/esp/esp-idf/components/hal/esp32/include -I/home/omen/esp/esp-idf/components/hal/include -I/home/omen/esp/esp-idf/components/esp_rom/include -I/home/omen/esp/esp-idf/components/esp_rom/include/esp32 -I/home/omen/esp/esp-idf/components/esp_rom/esp32 -I/home/omen/esp/esp-idf/components/esp_common/include -I/home/omen/esp/esp-idf/components/esp_system/include -I/home/omen/esp/esp-idf/components/esp_system/port/soc -I/home/omen/esp/esp-idf/components/esp_system/port/include/private -I/home/omen/esp/esp-idf/components/xtensa/esp32/include -I/home/omen/esp/esp-idf/components/xtensa/include -I/home/omen/esp/esp-idf/components/xtensa/deprecated_include -I/home/omen/esp/esp-idf/components/lwip/include -I/home/omen/esp/esp-idf/components/lwip/include/apps -I/home/omen/esp/esp-idf/components/lwip/include/apps/sntp -I/home/omen/esp/esp-idf/components/lwip/lwip/src/include -I/home/omen/esp/esp-idf/components/lwip/port/include -I/home/omen/esp/esp-idf/components/lwip/port/freertos/include -I/home/omen/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/omen/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/omen/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/omen/esp/esp-idf/components/driver/include -I/home/omen/esp/esp-idf/components/driver/deprecated -I/home/omen/esp/esp-idf/components/driver/analog_comparator/include -I/home/omen/esp/esp-idf/components/driver/dac/include -I/home/omen/esp/esp-idf/components/driver/gpio/include -I/home/omen/esp/esp-idf/components/driver/gptimer/include -I/home/omen/esp/esp-idf/components/driver/i2c/include -I/home/omen/esp/esp-idf/components/driver/i2s/include -I/home/omen/esp/esp-idf/components/driver/ledc/include -I/home/omen/esp/esp-idf/components/driver/mcpwm/include -I/home/omen/esp/esp-idf/components/driver/parlio/include -I/home/omen/esp/esp-idf/components/driver/pcnt/include -I/home/omen/esp/esp-idf/components/driver/rmt/include -I/home/omen/esp/esp-idf/components/driver/sdio_slave/include -I/home/omen/esp/esp-idf/components/driver/sdmmc/include -I/home/omen/esp/esp-idf/components/driver/sigma_delta/include -I/home/omen/esp/esp-idf/components/driver/spi/include -I/home/omen/esp/esp-idf/components/driver/temperature_sensor/include -I/home/omen/esp/esp-idf/components/driver/touch_sensor/include -I/home/omen/esp/esp-idf/components/driver/twai/include -I/home/omen/esp/esp-idf/components/driver/uart/include -I/home/omen/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/omen/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/omen/esp/esp-idf/components/esp_pm/include -I/home/omen/esp/esp-idf/components/esp_ringbuf/include -I/home/omen/esp/esp-idf/components/esp_lcd/include -I/home/omen/esp/esp-idf/components/esp_lcd/interface -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mfix-esp32-psram-cache-issue -mfix-esp32-psram-cache-strategy=memw -Og -fno-shrink-wrap -fmacro-prefix-map=/home/omen/esp/smart_watch=. -fmacro-prefix-map=/home/omen/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/smart_watch.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/smart_watch.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/smart_watch.c.obj -c /home/omen/esp/smart_watch/main/smart_watch.c
/home/omen/esp/smart_watch/main/smart_watch.c: In function 'app_main':
/home/omen/esp/smart_watch/main/smart_watch.c:211:5: error: too many arguments to function 'xTaskCreate'
  211 |     xTaskCreate(display_task, "DisplayTask", 16384, NULL, 5, NULL, NULL);
      |     ^~~~~~~~~~~
In file included from /home/omen/esp/esp-idf/components/freertos/esp_additions/include/freertos/idf_additions.h:20,
                 from /home/omen/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:1533,
                 from /home/omen/esp/smart_watch/main/smart_watch.c:4:
/home/omen/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/task.h:371:16: note: declared here
  371 |     BaseType_t xTaskCreate( TaskFunction_t pxTaskCode,
      |                ^~~~~~~~~~~
ninja: build stopped: subcommand failed.
